--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.0.0-rc.9", features = ["derive", "cargo"] }
-termsize = "0.1.6"
 opencv = "0.61"
+colored = "2"
+termsize = "0.1.6"
 faccess = "0.2.3"
