--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Dependencies
-      run: ci/deps-debian.sh
+      run: sudo ./ci/deps-debian.sh
 
     - name: Rust Toolchain
       uses: actions-rs/toolchain@v1
