--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Dependencies
-      run: sudo sh -c ci/deps-debian.sh
+      run: |
+        chmod +x ci/deps-debian.sh
+        sudo sh -c ci/deps-debian.sh
 
     - name: Rust Toolchain
       uses: actions-rs/toolchain@v1
