--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,9 @@ indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[{*.yml}]
+indent_size = 2
+
 [{LICENSE}]
 trim_trailing_whitespace = false
 
