--- a/.editorconfig
+++ b/.editorconfig
@@ -10,8 +10,5 @@ trim_trailing_whitespace = true
 [{*.yml}]
 indent_size = 2
 
-[{LICENSE}]
-trim_trailing_whitespace = false
-
-[{*.md}]
+[{LICENSE, *.md}]
 trim_trailing_whitespace = false
