--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Dependencies
-        run: ci/deps.sh
-        shell: bash
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get install -y clang
         
       - name: Install Rust
         uses: actions-rs/toolchain@v1
@@ -39,6 +39,7 @@ jobs:
           use-cross: true
           command: build
           args: --release --locked --target=${{ matrix.target }}
+          
       - name: Upload binary
         uses: svenstaro/upload-release-action@v2
         with:
