--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,15 +1,18 @@
-name: Release
+name: CICD
 
 on:
-  workflow_dispatch:
-    inputs:
-      tag:
-        required: true
+  push:
+    branches:
+      - "*"
+  pull_request:
+    branches:
+      - "*"
+
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  release:
+  src:
     strategy:
       matrix:
         include:
@@ -21,31 +24,30 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
-      - name: Dependencies
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get install -y clang
-          sudo ln -s libclang.so.1 /usr/lib/llvm-10/lib/libclang.so
-        
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
+
+      - name: Rust Toolchain
+        uses: actions-rs/toolchain@v1.0.6
         with:
-          toolchain: nightly
-          target: ${{ matrix.target }}
           default: true
-          
+          toolchain: nightly
+
+      - name: Dependencies
+        run: ci/deps.sh
+        shell: bash
+
       - name: Build binary
         uses: actions-rs/cargo@v1
         with:
           use-cross: true
           command: build
-          args: --release --locked --target=${{ matrix.target }}
-          
+          args: --verbose --release --locked --target=${{ matrix.target }}
+
+      # name: Benchmark
       - name: Upload binary
+        if: startsWith(github.ref, 'refs/tags/')
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: target/${{ matrix.target }}/release/asc
           asset_name: asciiframe-${{ matrix.target }}
-          tag: ${{ github.event.inputs.tag }}
+          tag: ${{ github.ref }}
