--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -16,6 +16,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - target: x86_64-unknown-linux-gnu
+            os: ubuntu-latest
           - target: x86_64-apple-darwin
             os: macos-latest
     runs-on: ${{ matrix.os }}
