Moved env vars to config.toml

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -37,6 +37,7 @@ jobs:
         shell: bash
 
       - name: Build binary
+        run: export
         uses: actions-rs/cargo@v1
         with:
           use-cross: true
