removed use of cross

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build binary
         uses: actions-rs/cargo@v1
         with:
-          use-cross: true
+          # use-cross: true
           command: build
           args: --verbose --release --locked --target=${{ matrix.target }}
 
