--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,3 @@
 [env]
-DYLD_FALLBACK_LIBRARY_PATH = "$(xcode-select --print-path)/Toolchains/XcodeDefault.xctoolchain/usr/lib/"
+DYLD_FALLBACK_LIBRARY_PATH="/Applications/Xcode_13.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/"
 LIBCLANG_PATH = "/usr/lib/llvm-10/lib/libclang.so"
