--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asciiframe"
-version = "1.1.1"
+version = "0.1.1"
 categories = ["command-line-utilities"]
 description = "Watch any video in the terminal with ASCII"
 homepage = "https://github.com/ltgr/asciiframe"
@@ -15,6 +15,6 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "3.0.5", features = ["derive", "cargo"] }
 opencv = "0.61"
-termsize = "0.1.6"
+terminal_size = "0.1.17"
 # ansi_term = "0.6.3"
 # ansi_colours = "^1.0"
