--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,12 +1,7 @@
 name: CICD
 
 on:
-  push:
-    branches:
-      - "*"
-  pull_request:
-    branches:
-      - "*"
+  [push, pull_request, create]:
 
 env:
   CARGO_TERM_COLOR: always
@@ -42,7 +37,7 @@ jobs:
       # name: Benchmark
 
       - name: Upload binary
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
