--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -35,4 +35,5 @@ jobs:
       - name: Build binary
         run: ci/build.sh
 
-      # name: Benchmark
+      - name: Benchmark
+        run: ci/benchmark.sh
