--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "asciiframe"
-version = "0.1.2"
+version = "0.1.3"
+keywords = ["cli", "ascii", "opencv"]
 categories = ["command-line-utilities"]
 description = "Watch any video in the terminal with ASCII"
 homepage = "https://github.com/ltgr/asciiframe"
