--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ homepage = "https://github.com/ltgr/asciiframe"
 authors = ["Luke"]
 license = "MIT"
 edition = "2021"
-exclude = ["ci/*", ".github/*"]
+exclude = ["ci/benchmarks/*"]
 
 [[bin]]
 name = "asc"
