--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,8 @@ indicatif = "0.16.2"
 terminal_size = "0.1.17"
 ansi_term = "0.12.1"
 # ansi_colours = "^1.0"
+
+[profile.release]
+opt-level = 3
+debug = 0
+lto = true
