--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,34 @@
 [package]
 name = "asciiframe"
-version = "1.2.0"
+version = "2.0.0"
 keywords = ["cli", "ascii", "opencv"]
 categories = ["command-line-utilities"]
-description = "Watch any video in the terminal with ASCII"
-homepage = "https://github.com/ltgr/asciiframe"
+description = "Convert any video to a stream of ASCII frames"
+homepage = "https://github.com/luke-rt/asciiframe"
 authors = ["Luke"]
 license = "MIT"
-edition = "2018"
+edition = "2021"
 exclude = ["ci/*", "examples/*"]
+
+[dependencies]
+thiserror = "1.0"
+opencv = "0.88.5"
+
+clap = { version = "4.4.11", features = ["derive", "cargo"], optional = true }
+terminal_size = { version = "0.3.0", optional = true }
+
+[features]
+default = ["application"]
+application = ["clap", "terminal_size"]
 
 [[bin]]
 name = "asc"
 path = "src/bin/asc/main.rs"
+required-features = ["application"]
 
-[dependencies]
-clap = { version = "3.2.2", features = ["derive", "cargo"] }
-opencv = "0.66"
-indicatif = "0.16.2"
-terminal_size = "0.2.1"
-ansi_term = "0.12.1"
-# ansi_colours = "^1.0"
+[lib]
+name = "asciiframe"
+path = "src/lib.rs"
 
 [profile.release]
 opt-level = 3
